tests/algorithms/x/Erlang/graphs/dijkstra.error
run: exit status 127
escript: exception error: no function clause matching lists:sublist(#{},"E") (lists.erl, line 592)
  in function  main:'-main/1-Fun_4_loop/0-0-'/0 (/workspace/mochi/tests/algorithms/x/Erlang/graphs/dijkstra.erl, line 92)
  in call from main:main/1 (/workspace/mochi/tests/algorithms/x/Erlang/graphs/dijkstra.erl, line 128)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
  in call from init:do_boot/3